# rag-agent-chat

./: .dockerignore  pyproject.toml
src/: main.py
src/agent/: __init__.py  agent.py  state.py
src/config/configurer/: agent.py  search_tool.py  vector_store.py
src/data/: base_model.py  dto.py  model.py
src/process/recognizer/: __init__.py
src/process/recognizer/image/: main.py
src/route/: __init__.py  agent.py  document.py
src/util/: __init__.py  constant.py  function.py
