[project]
name = "rag-agent"
version = "0.1.0"
description = "An agent is built by LangGraph and desgin based on RAG-Contextual."
authors = [
    { name = "BangNhatLe", email = "bangle37568@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "jsonpickle (>=4.1.0,<5.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "fastapi[standard] (>=0.115.9,<0.116.0)",
    "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
